--- a/index.html
+++ b/index.html
@@ -1,98 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Calculator</title>
-    <!-- Google Font for a friendly look -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet" />
-    <style>
-      :root {
-        --bg: #f8fafc;
-        --panel: #ffffff;
-        --primary: #2563eb;
-        --danger: #dc2626;
-        --radius: 0.75rem;
-        --shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Calc-Note</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --primary: #2563eb;
+      --bg: #f9fafb;
+      --white: #ffffff;
+      --gray: #e5e7eb;
+      --green: #10b981;
+      --red: #dc2626;
+      --radius: 0.75rem;
+    }
 
-      * {
-        box-sizing: border-box;
-        font-family: "Inter", sans-serif;
-      }
+    body {
+      font-family: "Inter", sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: var(--bg);
+    }
 
-      body {
-        background: var(--bg);
-        display: flex;
-        justify-content: center;
+    h1 {
+      text-align: center;
+      color: var(--primary);
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .calculator, .notepad {
+      background: var(--white);
+      padding: 1rem;
+      border-radius: var(--radius);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      width: 320px;
+    }
+
+    .display {
+      background: #e2e8f0;
+      border-radius: var(--radius);
+      padding: 0.75rem 1rem;
+      font-size: 1.5rem;
+      text-align: right;
+      overflow-x: auto;
+      margin-bottom: 1rem;
+    }
+
+    .keys {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 0.5rem;
+    }
+
+    button {
+      padding: 1rem;
+      font-size: 1.25rem;
+      border: none;
+      border-radius: var(--radius);
+      cursor: pointer;
+    }
+
+    .operator { background: var(--primary); color: white; }
+    .clear { background: var(--red); color: white; }
+    .equal { background: var(--green); color: white; grid-column: span 2; }
+    .number { background: #f1f5f9; color: #0f172a; }
+
+    textarea {
+      width: 100%;
+      height: 260px;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: var(--radius);
+      border: 1px solid var(--gray);
+      resize: vertical;
+      box-sizing: border-box;
+    }
+
+    @media (max-width: 700px) {
+      .container {
+        flex-direction: column;
         align-items: center;
-        height: 100vh;
-        margin: 0;
-        padding: 1rem;
       }
-
-      .calculator {
-        background: var(--panel);
-        border-radius: var(--radius);
-        box-shadow: var(--shadow);
-        width: 320px;
-        padding: 1rem;
-        display: grid;
-        grid-template-rows: auto 1fr;
-        gap: 1rem;
-      }
-
-      .display {
-        background: #e2e8f0;
-        border-radius: var(--radius);
-        padding: 0.75rem 1rem;
-        font-size: 1.5rem;
-        text-align: right;
-        overflow-x: auto;
-      }
-
-      .keys {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 0.5rem;
-      }
-
-      button {
-        padding: 1rem;
-        font-size: 1.25rem;
-        border: none;
-        border-radius: var(--radius);
-        cursor: pointer;
-        transition: background 0.15s ease;
-      }
-
-      button:active {
-        transform: scale(0.97);
-      }
-
-      .operator {
-        background: var(--primary);
-        color: #fff;
-      }
-
-      .clear {
-        background: var(--danger);
-        color: #fff;
-      }
-
-      .equal {
-        background: #10b981;
-        color: #fff;
-        grid-column: span 2;
-      }
-
-      .number {
-        background: #f1f5f9;
-        color: #0f172a;
-      }
-    </style>
-  </head>
-  <body>
+    }
+  </style>
+</head>
+<body>
+  <h1>CALC-NOTE</h1>
+  <div class="container">
+    <!-- Calculator -->
     <div class="calculator">
       <div id="display" class="display">0</div>
       <div class="keys">
@@ -119,85 +122,87 @@
       </div>
     </div>
 
-    <script>
-      // Grab relevant elements
-      const display = document.getElementById("display");
-      const keys = document.querySelector(".keys");
+    <!-- Notepad -->
+    <div class="notepad">
+      <textarea id="notepad" placeholder="Type your notes here..."></textarea>
+    </div>
+  </div>
 
-      // Calculator state
-      let firstValue = null;
-      let operator = null;
-      let waitingForSecondValue = false;
+  <script>
+    // Calculator logic
+    const display = document.getElementById("display");
+    const keys = document.querySelector(".keys");
 
-      // Helper to perform calculations
-      const calculate = {
-        add: (a, b) => a + b,
-        subtract: (a, b) => a - b,
-        multiply: (a, b) => a * b,
-        divide: (a, b) => a / b,
-      };
+    let firstValue = null;
+    let operator = null;
+    let waitingForSecondValue = false;
 
-      // Reset calculator
-      function clearDisplay() {
-        firstValue = null;
-        operator = null;
-        waitingForSecondValue = false;
-        display.textContent = "0";
+    const calculate = {
+      add: (a, b) => a + b,
+      subtract: (a, b) => a - b,
+      multiply: (a, b) => a * b,
+      divide: (a, b) => a / b,
+    };
+
+    function clearDisplay() {
+      firstValue = null;
+      operator = null;
+      waitingForSecondValue = false;
+      display.textContent = "0";
+    }
+
+    keys.addEventListener("click", (e) => {
+      if (!e.target.matches("button")) return;
+      const button = e.target;
+      const content = button.textContent;
+      const action = button.dataset.action;
+
+      if (!action) {
+        if (waitingForSecondValue) {
+          display.textContent = content;
+          waitingForSecondValue = false;
+        } else {
+          display.textContent =
+            display.textContent === "0" ? content : display.textContent + content;
+        }
+        return;
       }
 
-      // Handle button clicks
-      keys.addEventListener("click", (e) => {
-        if (!e.target.matches("button")) return;
+      if (action === "clear") {
+        clearDisplay();
+        return;
+      }
 
-        const button = e.target;
-        const content = button.textContent;
-        const action = button.dataset.action;
-
-        // Number or decimal pressed
-        if (!action) {
-          if (waitingForSecondValue) {
-            display.textContent = content;
-            waitingForSecondValue = false;
-          } else {
-            display.textContent =
-              display.textContent === "0" ? content : display.textContent + content;
-          }
-          return;
+      if (["add", "subtract", "multiply", "divide"].includes(action)) {
+        if (firstValue === null) {
+          firstValue = parseFloat(display.textContent);
+        } else if (operator) {
+          const result = calculate[operator](firstValue, parseFloat(display.textContent));
+          display.textContent = String(result);
+          firstValue = result;
         }
+        operator = action;
+        waitingForSecondValue = true;
+        return;
+      }
 
-        // Clear
-        if (action === "clear") {
-          clearDisplay();
-          return;
+      if (action === "equal") {
+        if (operator && !waitingForSecondValue) {
+          const secondValue = parseFloat(display.textContent);
+          const result = calculate[operator](firstValue, secondValue);
+          display.textContent = String(result);
+          firstValue = result;
+          operator = null;
         }
+      }
+    });
 
-        // Operator
-        if (["add", "subtract", "multiply", "divide"].includes(action)) {
-          if (firstValue === null) {
-            firstValue = parseFloat(display.textContent);
-          } else if (operator) {
-            const result = calculate[operator](firstValue, parseFloat(display.textContent));
-            display.textContent = String(result);
-            firstValue = result;
-          }
-          operator = action;
-          waitingForSecondValue = true;
-          return;
-        }
-
-        // Equal
-        if (action === "equal") {
-          if (operator && !waitingForSecondValue) {
-            const secondValue = parseFloat(display.textContent);
-            const result = calculate[operator](firstValue, secondValue);
-            display.textContent = String(result);
-            firstValue = result;
-            operator = null;
-          }
-        }
-      });
-    </script>
-  </body>
+    // Notepad logic
+    const notepad = document.getElementById("notepad");
+    notepad.value = localStorage.getItem("notes") || "";
+    notepad.addEventListener("input", () => {
+      localStorage.setItem("notes", notepad.value);
+    });
+  </script>
+</body>
 </html>
-
-
