--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 
     .operator { background: var(--primary); color: white; }
     .clear { background: var(--red); color: white; }
-    .equal { background: var(--green); color: white; grid-column: span 2; }
+    .equal { background: var(--green); color: white; }
     .number { background: #f1f5f9; color: #0f172a; }
 
     textarea {
       width: 100%;
-      height: 260px;
+      height: 360px;
       padding: 0.75rem;
       font-size: 1rem;
       border-radius: var(--radius);
@@ -117,7 +117,8 @@
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button class="number" style="grid-column: span 2;">0</button>
+        <button class="number">0</button>
+
         <button class="number">.</button>
       </div>
     </div>
@@ -206,3 +207,4 @@
   </script>
 </body>
 </html>
+
